--- a/index.html
+++ b/index.html
@@ -13,6 +13,167 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <div class="main-container">
+    <header>
+      <nav class="navbar navbar-default">
+        <div class="logo-wrap">
+          <a href="javascript:void(0)" class="nav-link">
+            <img src="./images/left-arrow.png" alt="" class="icons-img">
+          </a>
+          <a href="javascript:void(0)">
+            <img src="./images/Invezta-Logo.png" alt="" class="logo">
+          </a>
+        </div>
+        <a href="javascript:void(0)" class="nav-link">
+          <img src="./images/close.png" alt="" class="icons-img close">
+        </a>
+      </nav>
+    </header>
+    <section class="main-body">
+      <div class="container-fluid p-0">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="portfolio-head">
+              <h1>Your Recommended Portfolio</h1>
+              <p>How did we do it?</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="invest-main-wrapper">
+              <div class="invest invest-mob">
+                <div class="invest-details">
+                  <h2>Car</h2>
+                  <p>Goal Selected</p>
+                </div>
+              </div>
+              <div class="invest">
+                <div class="invest-wrap">
+                  <img src="./images/indian.png" alt="" class="icons-data">
+                  <div class="invest-details">
+                    <h2>9L</h2>
+                    <p>Target Amount</p>
+                  </div>
+                </div>
+              </div>
+              <div class="invest">
+                <div class="invest-wrap">
+                  <img src="./images/calendar.png" alt="" class="icons-data">
+                  <div class="invest-details">
+                    <h2>June 2032</h2>
+                    <p>Target Date</p>
+                  </div>
+                </div>
+              </div>
+              <div class="invest invest-mob">
+                <div class="invest-details">
+                  <h2>SIP</h2>
+                  <p>Investment Type</p>
+                </div>
+              </div>
+              <div class="invest">
+                <div class="invest-wrap">
+                  <!-- <img src="./images/rupee-indian.png" alt="" class="icons-data"> -->
+                  <h3>₹</h3>
+                  <div class="invest-details">
+                    <h2>30,000</h2>
+                    <p>Investment Needed</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="chart-wrapper">
+              <div class="chart">
+                <div class="chart-default">
+                  <div class="chart-text">
+                    <div class="chart-text-wrapper">
+                      <p class="chart-text-blue"><span>Debt</span> 50%</p>
+                      <p class="chart-text-green"><span>Equity</span> 50%</p>
+                    </div>
+                  </div>
+                  <div class="chart-case"></div>
+                  </div>
+              </div>
+              <div class="chart-opac">
+                <div class="chart-default">
+                  <div class="chart-case-cover"></div>
+                </div>
+              </div>
+            </div>
+            <div class="chart-data">
+              <p>Aditya Birla Sun Life Frontline Equity Fund - Growth - Direct Plan(25%)</p>
+            </div>
+          </div>
+          <div class="col-lg-8 p-0">
+            <div class="plan-wrapper">
+              <div class="direct-plan">
+                <div class="direct-details">
+                  <h4>Aditya Birla Sun Life Frontline Equity Fund - Growth - Direct Plan</h4>
+                  <div class="direct-invest">
+                    <div class="cap-data">
+                      <span>Large Cap</span>
+                    </div>
+                    <div class="invest-amount">
+                      <span>Min. Investment Amt : 500</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="direct-rates">
+                  <span>10,000</span>
+                </div>
+              </div>
+              <div class="direct-plan directplan1">
+                <div class="direct-details">
+                  <h4>Franklin India Prima Fund - Growth - Direct Plan</h4>
+                  <div class="direct-invest">
+                    <div class="cap-data">
+                      <span>Mid/Small Cap</span>
+                    </div>
+                    <div class="invest-amount">
+                      <span>Min. Investment Amt : 500</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="direct-rates">
+                  <span>10,000</span>
+                </div>
+              </div>
+              <div class="direct-plan directplan2">
+                <div class="direct-details">
+                  <h4>ICICI Prudential Bond Fund - Growth - Direct Plan</h4>
+                  <div class="direct-invest">
+                    <div class="cap-data">
+                      <span>Long Term Income/Gilt</span>
+                    </div>
+                    <div class="invest-amount">
+                      <span>Min. Investment Amt : 500</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="direct-rates">
+                  <span>10,000</span>
+                </div>
+              </div>
+              <div class="inr">
+                <span>All values are in INR</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="start-investing">
+              <button class="investion" type="button">Start Investing Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
 </body>
 </html>
